corrected overlap of menu

--- a/assets/css/MenuClick.css
+++ b/assets/css/MenuClick.css
@@ -151,3 +151,13 @@
     display: none;
   }
 }
+
+.action .menu.active {
+  width: 600px;
+  right: 160px
+}
+
+
+
+
+
